ship overlap is getting fixed

--- a/Styling/style.css
+++ b/Styling/style.css
@@ -329,6 +329,27 @@ div .ship-end {
   background-color: #2b2d42;
 }
 
+div .ship-start-vertical {
+  border-top-left-radius: 25px !important;
+  border-top-right-radius: 25px !important;
+  border-bottom: none;
+  background-color: #2b2d42;
+}
+
+div .ship-vertical {
+  background-color: #2b2d42;
+  border-top: 0;
+  border-bottom: 0;
+  border-radius: 0;
+}
+
+div .ship-end-vertical {
+  border-bottom-right-radius: 25px !important;
+  border-bottom-left-radius: 25px !important;
+  border-top: none;
+  background-color: #2b2d42;
+}
+
 footer {
   display: flex;
   background-color: #2b2d42;
